# anvil

./: .clang-format  .gitignore  Anvil.slnx  Anvil.vcxproj  Anvil.vcxproj.filters  CMakeLists.txt  CMakeSettings.json
.github/workflows/: Build.yml
CMake/: CompileShader.cmake
Include/Common/: Types.hpp  Version.hpp.in
Include/Core/: Game.hpp
Include/Game/: CameraInput.hpp  FreeCamera.hpp
Include/Gameplay/: CameraInput.hpp  FreeCamera.hpp
Include/Gpu/: Buffer.hpp  Checkerboard.hpp  DescriptorAllocator.hpp  FrameState.hpp  MaterialState.hpp  Primitives.hpp  Renderer.hpp  StaticMeshPipeline.hpp  StaticVertex.hpp  SwapChain.hpp  Texture.hpp  VulkanContext.hpp
Include/Math/: Mat4.hpp  Transforms.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Include/Platform/: Win32Window.hpp
Resources/Shaders/: Basic.frag  Basic.vert
Source/: Main.cpp
Source/Core/: Game.cpp
Source/Game/: FreeCamera.cpp
Source/Gameplay/: FreeCamera.cpp
Source/Gpu/: Buffer.cpp  DescriptorAllocator.cpp  FrameState.cpp  MaterialState.cpp  Renderer.cpp  StaticMeshPipeline.cpp  SwapChain.cpp  Texture.cpp  VulkanContext.cpp
Source/Platform/: Win32Window.cpp
